1.移除config工具包